--- a/personal-website/style.css
+++ b/personal-website/style.css
@@ -5,13 +5,13 @@
   padding: 0;
   box-sizing: border-box;
   font-family: Quicksand;
+  background-color: rgb(226, 197, 159);
 }
 
 .header {
   width: 100%;
   height: 100vh;
   padding: 0 10%;
-  background-color: rgb(226, 197, 159);
 }
 
 nav {
@@ -24,44 +24,54 @@ nav {
 }
 
 nav ul li {
-    display: inline-block;
-    list-style: none;
-    margin: 10px 30px;
+  display: inline-block;
+  list-style: none;
+  margin: 10px 30px;
 }
 
 nav ul li a {
-    text-decoration: none;
-    color: rgb(186, 91, 57);
+  text-decoration: none;
+  color: rgb(186, 91, 57);
 }
 
 .text-box {
-    margin-top: 50px;
-    max-width: 600px;
+  margin-top: 50px;
+  max-width: 600px;
 }
 
 .text-box h1 {
-    font-size: 35px;
-    margin-bottom: 20px;
-    color: rgb(186, 91, 57);
+  font-size: 35px;
+  margin-bottom: 20px;
+  color: rgb(186, 91, 57);
 }
 
 .text-box p {
-    margin-bottom: 20px;
-    margin-right: 15px;
-    font-size: 25px;
-    color: rgb(186, 91, 57);
+  margin-bottom: 20px;
+  margin-right: 15px;
+  font-size: 25px;
+  color: rgb(186, 91, 57);
+}
 
+.text-box h3 {
+  font-size: 20px;
+  margin: 30px;
+  color: rgb(186, 91, 57);
 }
 
 .photo-right {
-position: absolute;
-top: 200px;
-right: 12%;
+  position: absolute;
+  top: 20%;
+  right: 12%;
 }
 
 .quote {
-    margin-top: 200px;
-    text-align: center;
-    font-size: 25px;
-    color: rgb(186, 91, 57);
+  margin-top: 200px;
+  text-align: center;
+  font-size: 25px;
+  color: rgb(186, 91, 57);
+}
+
+.photo {
+  position: absolute;
+  right: 12%;
 }
