text size adjustment on home page

--- a/personal-website/style.css
+++ b/personal-website/style.css
@@ -38,11 +38,15 @@ nav ul li a {
   margin: 75px 15px;
   font-size: 35px;
   color: rgb(186, 91, 57);
-  font-size: 20px;
+  font-size: 25px;
 }
 .text-box h3{
   text-decoration: underline;
   margin: 15px;
+}
+.text-box h2{
+  margin: 15px;
+  font-size: 35px;
 }
 
 .quote {
