--- a/personal-website/style.css
+++ b/personal-website/style.css
@@ -40,11 +40,11 @@ nav ul li a {
   color: rgb(186, 91, 57);
   font-size: 25px;
 }
-.text-box h3{
+.text-box h3 {
   text-decoration: underline;
   margin: 15px;
 }
-.text-box h2{
+.text-box h2 {
   margin: 15px;
   font-size: 35px;
 }
@@ -60,11 +60,53 @@ nav ul li a {
   float: left;
   left: 12%;
   margin: 15px 15px;
-
 }
 .photo-2 {
   float: right;
   right: 12%;
   margin: 15px 15px;
-
 }
+
+footer {
+  background-color: rgb(186, 91, 57);
+  height: 70px;
+  padding: 10px;
+  position: fixed;
+  left: 0%;
+  right: 0%;
+  bottom: 0%;
+  width: 100%;
+  text-align: center;
+  text-decoration: none;
+}
+
+footer a {
+  margin: 0 25px;
+}
+.socials {
+  height: 45px;
+  background-color: rgb(186, 91, 57);
+}
+.contactme{
+  display: flex;
+  align-items: center;
+}
+form{
+  display: flex;
+  flex-flow: column;
+  margin: 8% 8%;
+  padding: 0% 12%;
+  box-sizing: border-box;
+}
+form button {
+  margin: 5%;
+  padding: 10px;
+  background-color:rgb(226, 197, 159);
+}
+button:hover{
+  background-color: rgb(186, 91, 57);
+  font-size: larger;
+  transition:0.45s;
+}
+
+
