Fixing issue with images not loading due to moving to a folder. Made nav pages transition when hover

--- a/personal-website/style.css
+++ b/personal-website/style.css
@@ -108,5 +108,9 @@ button:hover{
   font-size: larger;
   transition:0.45s;
 }
-
+nav ul li:hover{
+  font-size: 20px;
+  transition:0.45s;
+  text-decoration-line: underline;
+}
 
